k8s/pod.yml
---
apiVersion: v1
kind: Deployment 
  name: deployment-odo
  namespace: oumar-diallo
spec:
  replicas: 3
 selector:
    matchLabels:
      app: motd
  template:
    metadata:
      labels:
        app: motd
    spec: 
    containers:
      - name: motd
        image: 0diallo/motd:latest
