k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-odo
spec:
  selector:
    app: motd
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      # type: ClusterIP
