k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: motd-ingress
  namespace: oumar-diallo 
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: oumar-diallo.amnay.fr
      http:
        paths:
          - path: /
            backend:
              serviceName: service-odo
              servicePort: 80
